--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 pandas
 numpy
-scikit-learn
+scikit-learn>=1.0
 matplotlib
 seaborn
-xgboost
-lightgbm
+xgboost>=1.5
+lightgbm>=3.3
 tensorflow
 shap
 streamlit
