--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pandas
-numpy
-scikit-learn>=1.0
-matplotlib
-seaborn
+pandas>=2.1
+numpy>=1.26
+scikit-learn>=1.3
+matplotlib>=3.8
+seaborn>=0.13
 xgboost>=1.5
 lightgbm>=3.3
-tensorflow
-shap
-streamlit
+tensorflow>=2.18
+shap>=0.46
+streamlit>=1.40
